Fix overflow

--- a/frontend/scss/state/_s-layered-image-viewer-active.scss
+++ b/frontend/scss/state/_s-layered-image-viewer-active.scss
@@ -9,6 +9,7 @@ When fullscreen / using modal on layered image viewer
 ***/
 
 .s-layered-image-viewer-modal-active {
+  &,
   body {
     overflow: hidden;
   }
